--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/tobilg/fs2obj/issues"
   },
   "dependencies": {
-    "lodash": "4.13.1"
+    "lodash": ">=4.17.5"
   },
   "devDependencies": {
     "mocha": "2.0.x",
