--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fs2obj",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Get the directory tree as recursive object, including absolute and relative paths",
   "main": "./lib/",
   "author": {
@@ -14,12 +14,12 @@
     "url": "https://github.com/tobilg/fs2obj/issues"
   },
   "dependencies": {
-    "lodash": ">=4.17.5"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "chai": "^4.2.0",
-    "jshint": "^2.9.7"
+    "mocha": "^10.1.0",
+    "chai": "^4.3.7",
+    "jshint": "^2.13.6"
   },
   "keywords": [
     "directory",
